--- a/content/themes/ghost-wbkd/default.hbs
+++ b/content/themes/ghost-wbkd/default.hbs
@@ -8,6 +8,24 @@
     {{! Page Meta }}
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
+    <meta content="index,follow" name="robots" />
+    <meta content="{{meta_description}}" property="og:description" />
+    <meta content="52.370529,4.893000" name="ICBM" />
+    <meta content="52.370529;4.893000" name="geo.position" />
+    <meta content="Amsterdam,, nl" name="geo.placename" />
+    <meta content="NL" name="geo.region" />
+    <meta name="twitter:card" value="summary" />
+    <meta name="twitter:site" value="@codaisseur" />
+    <meta content="Codaisseur" property="og:site_name" />
+    <meta content="Codaisseur" property="og:title" />
+    <meta content="activity" property="og:type" />
+    <meta content="{{meta_description}}" name="twitter:description" />
+    <meta content="https://www.developmentbootcamp.nl/blog" name="twitter:url" />
+    <meta content="Amsterdam" property="og:locality" />
+    <meta content="nl" property="og:country-name" />
+    <meta content="52.37" property="og:latitude" />
+    <meta content="4.89" property="og:longitude" />
+    <meta content="{{ asset "images/codaisseur-square.png"}}" property="og:image" />
 
     <meta name="HandheldFriendly" content="True" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
