--- a/content/themes/ghost-wbkd/assets/css/webkid.css
+++ b/content/themes/ghost-wbkd/assets/css/webkid.css
@@ -1,5 +1,9 @@
+@import url("https://fonts.googleapis.com/css?family=Roboto:400,100,700,700italic,400italic,100italic,900");
+@import url("https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,700");
+
 body {
   background: #f5f5f5;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 body * {
@@ -11,7 +15,7 @@ body * {
 
 #header {
   padding: 0;
-  background: #50337d;
+  background: #c1272d;
   color: #fff;
   margin-bottom: 2em;
 }
@@ -27,12 +31,26 @@ body * {
   opacity: 1;
 }
 
+#header .blog-title span {
+  letter-spacing: 2px;
+}
+
+#header .blog-title span > small {
+  font-size: 0.6em;
+    display: inline-block;
+    margin-top: 0;
+    width: 5px;
+    height: 1em;
+    position: relative;
+    top: -3px;
+}
+
 #header .blog-logo img {
   height: 35px;
 }
 
 #header .blog-title {
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto Slab", Georgia, "Times New Roman", Times, serif;
   text-transform: uppercase;
   font-weight: bold;
   font-size: 30px;
@@ -69,7 +87,7 @@ body * {
   margin: 0;
   padding: .2em .5em;
   text-transform: uppercase;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   color: #111;
   font-size: 12px;
   float: left;
@@ -145,7 +163,7 @@ body * {
   color: #111;
 }
 
-#articles .post a, 
+#articles .post a,
 #articles .post a:visited{
   text-decoration: none;
 }
@@ -187,7 +205,7 @@ body * {
   margin-bottom: 1rem;
   padding-bottom: 1rem;
   display: block;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-weight: bold;
   border-bottom: 1px solid #eee;
   line-height: 1.3;
@@ -218,10 +236,10 @@ body * {
 }
 
 .sidebox .sidebox-title {
-  background: #50337d;
+  background: #c1272d;
   padding: .5em 1em;
   color: #fff;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
   font-size: 22px;
   font-weight: bold;
 }
@@ -341,7 +359,7 @@ body * {
   border-bottom: 5px solid #656565;
   -webkit-transition: background .5s;
   transition: background .5s;
-  font-family: "Open Sans", sans-serif;
+  font-family: "Roboto", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
 a.article-link,
