--- a/content/themes/ghost-wbkd/partials/header.hbs
+++ b/content/themes/ghost-wbkd/partials/header.hbs
@@ -2,14 +2,17 @@
 <header id="header">
     <nav class="header-nav" {{#if @blog.cover}}style="background-image:url({{@blog.cover}}){{/if}}">
 
-      <div class="blog-title"><a href="{{@blog.url}}">{{@blog.title}}</a></div>
+      <div class="blog-title"><a href="{{@blog.url}}">
+        <span>:{<small>)</small></span>
+        {{@blog.title}}
+      </a></div>
 
       <!--Change this to customize the navigation-->
       <div class="taglist-wrapper clearfix">
         <ul id="taglist" class="taglist">
             <li><a href="{{@blog.url}}">Home</a></li>
             <li><a href="https://www.developmentbootcamp.nl">Development Bootcamp</a></li>
-            <li><a href="http://practice.codaisseur.org">Practice online</a></li>
+            {{!-- <li><a href="http://practice.codaisseur.org">Practice online</a></li> --}}
             <li><a href="/tag/activities">Activities</a></li>
             <li><a href="/about">About</a></li>
         </ul>
