Navigation and favicon

--- a/content/themes/ghost-wbkd/partials/header.hbs
+++ b/content/themes/ghost-wbkd/partials/header.hbs
@@ -12,7 +12,8 @@
         <ul id="taglist" class="taglist">
             <li><a href="{{@blog.url}}">Home</a></li>
             <li><a href="https://www.developmentbootcamp.nl">Development Bootcamp</a></li>
-            {{!-- <li><a href="http://practice.codaisseur.org">Practice online</a></li> --}}
+            <li><a href="https://read.codaisseur.com">Course Reader</a></li>
+            <li><a href="http://www.codaisseur.com/we-are-hiring-web-development-teachers-in-amsterdam-backend-and-frontend/">Jobs</a></li>
             <li><a href="/tag/activities">Activities</a></li>
             <li><a href="/about">About</a></li>
         </ul>
