--- a/content/themes/ghost-wbkd/default.hbs
+++ b/content/themes/ghost-wbkd/default.hbs
@@ -17,7 +17,7 @@
     <meta name="twitter:card" value="summary" />
     <meta name="twitter:site" value="@codaisseur" />
     <meta content="Codaisseur" property="og:site_name" />
-    <meta content="Codaisseur" property="og:title" />
+    <meta content="{{meta_title}}" property="og:title" />
     <meta content="activity" property="og:type" />
     <meta content="{{meta_description}}" name="twitter:description" />
     <meta content="{{@blog.url}}{{url}}" name="twitter:url" />
